fix link btns hover text contrast

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -94,6 +94,7 @@ button {
 
 .btn:hover {
   background-color: var(--button-hover-bg-color);
+  color: var(--text-color-dark);
   text-decoration: none;
 }
 
